@@ -198,6 +198,7 @@ void QWebSettingsPrivate::apply()
         value = attributes.value(QWebSettings::LocalContentCanAccessRemoteUrls,
                                       global->attributes.value(QWebSettings::LocalContentCanAccessRemoteUrls));
         settings->setAllowUniversalAccessFromFileURLs(value);
+        settings->setUsesPageCache(WebCore::pageCache()->capacity());
     } else {
         QList<QWebSettingsPrivate*> settings = *::allSettings();
         for (int i = 0; i < settings.count(); ++i)
@@ -640,7 +641,9 @@ void QWebSettings::clearMemoryCaches()
 */
 void QWebSettings::setMaximumPagesInCache(int pages)
 {
+    QWebSettingsPrivate* global = QWebSettings::globalSettings()->d;
     WebCore::pageCache()->setCapacity(qMax(0, pages));
+    global->apply();
 }
 
 /*!
